# Advent-of-Django

./: .gitignore  Makefile  build.sh  db.sqlite3  db2.sqlite3  manage.py  pyproject.toml  requirements.txt
advent2022/: asgi.py  settings.py  urls.py  wsgi.py
advent2022/templates/: base.html  home.html  modal.html  nav.html  signup.html  submit_input.html
advent_days/: admin.py  apps.py  models.py  urls.py  views.py
advent_days/days/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  solve.py
advent_days/forms/: submit_answer.py
advent_days/migrations/: 0001_initial.py  0002_alter_dayresolution_likes_and_more.py  0002_initial.py  0003_auto_20240123_1919.py  0003_delete_python.py  0004_alter_dayresolution_id.py
adventapi/: admin.py  apps.py  models.py  serializers.py  views.py
adventapi/days/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  solve.py
adventapi/forms/: customCreateUser.py  submit_answer.py
adventapi/migrations/: 0001_initial.py  0002_dayresolution_user.py  0002_remove_dayresolution_user_alter_day_number.py  0003_alter_day_number_alter_dayresolution_id.py  0003_dayresolution_code.py  0004_dayresolution_language.py  0005_recentresolutions.py  (+13 more)
templates/: answers_table.html  base.html  code.html  comment.html  home.html  nav.html  reply.html  resolution_card.html  side_bar.html  signup.html  submit_input.html  user_profile.html
(+33 files in other folders)
