[tool.poetry]
name = "advent-of-code-2022-django"
version = "0.1.0"
description = ""
authors = ["Orianamartina <orianapettinelli04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14.0"
Werkzeug = "^3.0.1"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
